# watchlist-backend

./: .gitignore  pyproject.toml
api/: schema.py  urls.py
api/shows/: admin.py  models.py  mutations.py  schema.py  types.py
api/shows/fixtures/: tests_shows.json
api/shows/migrations/: 0001_initial.py
api/shows/tests/: tests_graphql_mutations.py  tests_graphql_query.py  utils.py
backend/: settings.py
