[tool.poetry]
name = "Backend"
version = "0.1.0"
description = ""
authors = ["Ian Bell <IanBell702@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {version = "^5.4", extras = ["toml"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
include = [
  "backend/*"
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true